# scannrs

./: .gitignore  Cargo.toml  flake.nix
src/: cli.rs  error.rs  main.rs
src/commands/: list.rs  mod.rs  options.rs  scan.rs
src/commands/tui/: device_picker.rs  mod.rs
